Stop logo jumping around in different designs

--- a/alpha-beta-nav/header.scss
+++ b/alpha-beta-nav/header.scss
@@ -66,7 +66,7 @@
             width: 100%;
           }
           .header-logo {
-            margin: 0 0 6px;
+            // margin: 0 0 6px;
           }
         }
       }
